feat: nav menu apis
